# zero2prod

./: .env  Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
.sqlx/: query-0b41341ee1e2e00f515756ae75b4d0e2d453679aec31a9a0092abea8855bbacd.json
configuration/: base.yml
migrations/: 20230808065855_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
