[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
actix-web = "4"
chrono = "0.4.26"
config = "0.13.3"
dotenv = "0.15.0"
log = "0.4.19"
once_cell = "1.18.0"
reqwest = "0.11.18"
serde = { version = "1.0.183", features= ["derive"] }
tokio = {version = "1.29.1", features=["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.8"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
uuid = { version = "1.4.1", features=["v4"] }

[dependencies.sqlx]
version = "^0.7.1"
default-feautures = false
features = [
  "runtime-tokio", 
  "tls-rustls",
  "macros",
  "postgres",
  "chrono",
  "uuid",
  "migrate"
]

